<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/headingApp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorWhite"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baridhara_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/login_heading"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/mobile_login"
                    android:hint="@string/mobile_number"
                    android:maxLength="10"
                    android:inputType="number"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:maxLength="4"
                    android:background="@drawable/password_login"
                    android:hint="@string/pin_hint"
                    android:inputType="numberPassword"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login"
                    android:text="@string/buttonLogin"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/rememberME" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgotPIN"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/signUp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:textAllCaps="false" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/broughtYouBy"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>