<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/headingApp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorWhite"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification"
                    android:textSize="25sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/otp_verification"/>

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/otp_enter"
                    android:hint="@string/otp"
                    android:maxLength="6"
                    android:inputType="number"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/did_not_received_otp"/>

                <TextView
                    android:id="@+id/resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:clickable="false"
                    android:text="@string/resend_otp"/>

                <Button
                    android:id="@+id/verify_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/broughtYouBy"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>