<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/headingApp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/sign_up_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorWhite"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baridhara_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/user_registration"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/your_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/name_signup"
                    android:hint="@string/enter_name"
                    android:maxLength="20"
                    android:inputType="text"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <EditText
                    android:id="@+id/your_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/address_signup"
                    android:hint="@string/enter_address"
                    android:inputType="text"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <EditText
                    android:id="@+id/your_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/mobile_login"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <EditText
                    android:id="@+id/account_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/password_login"
                    android:hint="@string/pin_hint"
                    android:maxLength="4"
                    android:inputType="numberPassword"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <EditText
                    android:id="@+id/account_password_re"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/password_login"
                    android:hint="@string/retype_pin"
                    android:maxLength="4"
                    android:inputType="numberPassword"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login"
                    android:layout_marginBottom="5dp"
                    android:text="@string/submitButton"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/terms_and_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/colorPrimary"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/toc_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:clickable="true"
                        android:focusable="true"
                        android:textStyle=""
                        android:text="@string/i_agree_all_the_terms_and_conditions"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/login_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="15dp"
                    android:text="@string/already_login"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/broughtYouBy"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>